welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:5: error: type mismatch;
 found   : (Int, Int)
 required: Boolean
		if (nums(i)->nombre )
                           ^